Rename 'Clasificador' to 'AQUA SMART' in templates and train.py

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}CLASIFICADOR{% endblock %}</title>
+    <title>{% block title %}AQUA SMART{% endblock %}</title>
 
     <!-- 🔹 Favicon personalizado -->
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='imagensinfondo.png') }}">
@@ -45,7 +45,7 @@
             vertical-align: middle;
             margin-top: 0; /* asegura que no se desplace hacia abajo */
         }
-        /* 🔹 Texto “CLASIFICADOR” más elegante y separado */
+    /* 🔹 Texto “AQUA SMART” más elegante y separado */
         .brand span {
             font-family: 'Montserrat Alternates', sans-serif;
             font-size: 28px;
@@ -132,7 +132,7 @@
     <div class="navbar">
         <div class="brand">
             
-            <span>♻️CLASIFICADOR</span>
+            <span>♻️ AQUA SMART</span>
         </div>
 
         <div class="nav-right">
