--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Iniciar Sesión - Clasificador{% endblock %}
+{% block title %}Iniciar Sesión - AQUA SMART{% endblock %}
 
 {% block content %}
 <style>
