--- a/templates/pagina3.html
+++ b/templates/pagina3.html
@@ -153,7 +153,7 @@
     <div class="content">
       <h2>Ingeniería del Modelo</h2>
       <p>
-        En esta fase del proyecto <strong>Clasificador de Residuos con Inteligencia Artificial</strong>,
+  En esta fase del proyecto <strong>AQUA SMART con Inteligencia Artificial</strong>,
         se desarrolló la estructura del modelo de aprendizaje profundo encargado de reconocer materiales reciclables.
         Para este propósito se utilizó la arquitectura <strong>DenseNet-121</strong> entrenada con miles de imágenes 
         de residuos pertenecientes a seis clases: cartón, vidrio, metal, papel, plástico y desechos generales.
@@ -172,7 +172,7 @@
 
       <h2>Evaluación del Modelo</h2>
       <p>
-        Una vez entrenado el clasificador, se evaluó su desempeño mediante métricas clave que permitieron medir 
+  Una vez entrenado AQUA SMART, se evaluó su desempeño mediante métricas clave que permitieron medir 
         su efectividad en la identificación de materiales reciclables. 
         Esta fase asegura que el modelo cumpla con los estándares de precisión requeridos antes de integrarse al sistema web Flask.
       </p>
