--- a/templates/users.html
+++ b/templates/users.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Administrar usuarios - Clasificador{% endblock %}
+{% block title %}Administrar usuarios - AQUA SMART{% endblock %}
 
 {% block content %}
 <style>
