--- a/templates/collect.html
+++ b/templates/collect.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Recolectar ejemplos - Clasificador{% endblock %}
+{% block title %}Recolectar ejemplos - AQUA SMART{% endblock %}
 
 {% block content %}
 <h2>Recolectar imagen etiquetada (solo admin)</h2>
