--- a/templates/pagina1.html
+++ b/templates/pagina1.html
@@ -8,13 +8,13 @@
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
  /* 🔹 Fondo general */
-body {
-    background-image: url('/static/fondopagina11.jpg');
-    background-size: auto;
-    background-position: center;
-    background-repeat: repeat;
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
+  body {
+  background-image: url('/static/uploads/133963719194906446.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
 }
     /* Barra superior */
     header {
