--- a/templates/pagina3.html
+++ b/templates/pagina3.html
@@ -8,10 +8,10 @@
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
     body {
-      background-image: url('/static/fondopagina2.jpg');
-      background-size: auto;
+      background-image: url('/static/uploads/133963719194906446.jpg');
+      background-size: cover;
       background-position: center;
-      background-repeat: repeat;
+      background-repeat: no-repeat;
       margin: 0;
       font-family: 'Poppins', sans-serif;
     }
