--- a/templates/register.html
+++ b/templates/register.html
@@ -7,10 +7,10 @@
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 body {
-    background-image: url('/static/registrar.png');
-    background-size: auto;
-    background-position: right;
-    background-repeat: repeat;
+    background-image: url('/static/uploads/133963719194906446.jpg');
+    background-size: cover;
+    background-position: center right;
+    background-repeat: no-repeat;
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
