--- a/templates/users.html
+++ b/templates/users.html
@@ -8,10 +8,10 @@
 
 /* 🔹 Fondo con degradado verde suave */
 body {
-    background-image: url('/static/usuarios1.jpg');
-    background-size: auto;
+    background-image: url('/static/uploads/133963719194906446.jpg');
+    background-size: cover;
     background-position: center;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     margin: 0;
     font-family: 'Poppins', sans-serif;
 }
